[tool.poetry]
name = "repl_nix_LinechatGPT"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
line-bot-sdk = "^2.4.2"
openai = "^0.27.2"
Flask = "^2.2.3"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
